--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Frontend-Marathon</title>
 </head>
+
 <body>
-    <h1>Frontend-Marathon</h1>
-    <ul>
-        <li><a href="./01-cards-sources/index.html">01-cards-sources</a></li>
-        <li><a href="./02-drag-n-drop-sources/index.html">02-drag-n-drop-sources</a></li>
-        <li><a href="./03-slider-sources/index.html">03-slider-sources</a> </li>
-        <li><a href="./04-board-sources/index.html">04-board-sources</a></li>
-        <li><a href="./05-aim-game-sources/index.html">05-aim-game-sources</a> </li>
-        <li></li>
-    </ul>
+    <div class="screen">
+        <h1>Frontend-Marathon</h1>
+        <div class="menu">
+            <ul>
+                <li><a href="./01-cards-sources/index.html">01-cards-sources</a></li>
+                <li><a href="./02-drag-n-drop-sources/index.html">02-drag-n-drop-sources</a></li>
+                <li><a href="./03-slider-sources/index.html">03-slider-sources</a> </li>
+                <li><a href="./04-board-sources/index.html">04-board-sources</a></li>
+                <li><a href="./05-aim-game-sources/index.html">05-aim-game-sources</a> </li>
+            </ul>
+        </div>
+    </div>
 </body>
+
 </html>
